# Imagine

./: CMakeLists.txt  README.md
Features/: CMakeLists.txt
Features/CMake/: UseImagineFeatures.cmake
Features/src/: CMakeLists.txt  LoweSIFT.cpp  MSER.cpp
Features/src/Imagine/: Features.h
Features/src/Imagine/Features/: LoweSIFT.h  MSER.h
Features/src/lowe/: LoweKey.cpp  LoweUtil.cpp  LoweUtil.h  lowe_old.rar
Features/test/: CMakeLists.txt  example.cpp  test.cpp  toys_F_0200_0000.txt
Geometry/: CMakeLists.txt
Geometry/CMake/: UseImagineGeometry.cmake
Geometry/src/: CMakeLists.txt
Geometry/src/Imagine/: Geometry.h
Geometry/src/Imagine/Geometry/: Affine.h  Camera.h  ComputeF.h  Distortion.h  Fundamental.h  Graphics.h  Homography.h  Import.h  Normalize.h  Polynomial.h  Triangulation.h  Trifocal.h  TrifocalRansac.h
Geometry/test/: CMakeLists.txt  citymatch01.txt  example.cpp  toyscam0000.txt  toyscam0200.txt
Optim/: CMakeLists.txt
Optim/CMake/: UseImagineOptim.cmake
Optim/src/: CMakeLists.txt
Optim/src/Imagine/: Optim.h
Optim/src/Imagine/Optim/: GCoptimization.h  GCoptimization_cpp.h  Graph.h  Ransac.h  energy.h  maxflow_cpp.h
Optim/test/: CMakeLists.txt  example.cpp
